maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:43: error: '=' expected but ';' found.
  while (!estSurBiscuit) {
^